# Visual-Construct

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeListss.txt  README.md  build_win64.bat  imgui.ini
.github/workflows/: tests.yml
dep/bullet3/lib/Debug/: Bullet2FileLoader_Debug.lib  Bullet3Collision_Debug.lib  Bullet3Common_Debug.lib  Bullet3Dynamics_Debug.lib  Bullet3Geometry_Debug.lib  BulletFileLoader_Debug.lib  BulletInverseDynamicsUtils_Debug.lib  BulletInverseDynamics_Debug.lib  BulletWorldImporter_Debug.lib  BulletXmlWorldImporter_Debug.lib  BussIK_Debug.lib  ConvexDecomposition_Debug.lib  GIMPACTUtils_Debug.lib  LinearMath_Debug.lib  OpenGLWindow_Debug.lib  clsocket_Debug.lib
dep/bullet3/lib/Release/: Bullet2FileLoader.lib  Bullet3Collision.lib  Bullet3Common.lib  Bullet3Dynamics.lib  Bullet3Geometry.lib  Bullet3OpenCL_clew.lib  BulletCollision.lib  BulletDynamics.lib  BulletExampleBrowserLib.lib  BulletFileLoader.lib  BulletInverseDynamics.lib  BulletInverseDynamicsUtils.lib  BulletSoftBody.lib  BulletWorldImporter.lib  BulletXmlWorldImporter.lib  BussIK.lib  ConvexDecomposition.lib  GIMPACTUtils.lib  HACD.lib  LinearMath.lib  OpenGLWindow.lib  clsocket.lib  gtest.lib
dep/bullet3/src/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
dep/bullet3/src/Bullet3Collision/: Bullet3Collision.vcxproj  Bullet3Collision.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
dep/bullet3/src/Bullet3Collision/Bullet3Collision.dir/Debug/Bullet3Collision.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
dep/bullet3/src/Bullet3Collision/Bullet3Collision.dir/Release/Bullet3Collision.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
dep/bullet3/src/Bullet3Common/: Bullet3Common.vcxproj  Bullet3Common.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
dep/bullet3/src/Bullet3Common/Bullet3Common.dir/Debug/Bullet3Common.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
dep/bullet3/src/Bullet3Common/Bullet3Common.dir/Release/Bullet3Common.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.read.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
dep/bullet3/src/Bullet3Dynamics/: Bullet3Dynamics.vcxproj  Bullet3Dynamics.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
dep/bullet3/src/Bullet3Dynamics/Bullet3Dynamics.dir/Debug/Bullet3Dynamics.tlog/: Bullet3Dynamics.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
dep/bullet3/src/Bullet3Dynamics/Bullet3Dynamics.dir/Release/Bullet3Dynamics.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog
dep/bullet3/src/Bullet3Geometry/: Bullet3Geometry.vcxproj  Bullet3Geometry.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
dep/bullet3/src/Bullet3Geometry/Bullet3Geometry.dir/Debug/Bullet3Geometry.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CustomBuild.command.1.tlog  (+4 more)
dep/bullet3/src/Bullet3OpenCL/: Bullet3OpenCL_clew.vcxproj  Bullet3OpenCL_clew.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
dep/bullet3/src/Bullet3Serialize/Bullet2FileLoader/: Bullet2FileLoader.vcxproj  Bullet2FileLoader.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
dep/bullet3/src/BulletCollision/: BulletCollision.vcxproj  BulletCollision.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
dep/bullet3/src/BulletDynamics/: BulletDynamics.vcxproj  BulletDynamics.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
dep/bullet3/src/BulletInverseDynamics/: BulletInverseDynamics.vcxproj  BulletInverseDynamics.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
dep/bullet3/src/BulletSoftBody/: BulletSoftBody.vcxproj  BulletSoftBody.vcxproj.filters  CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
dep/bullet3/src/LinearMath/: CTestTestfile.cmake  INSTALL.vcxproj  INSTALL.vcxproj.filters  LinearMath.vcxproj  LinearMath.vcxproj.filters  RUN_TESTS.vcxproj  RUN_TESTS.vcxproj.filters  cmake_install.cmake
dep/imgui/: imgui_impl_vulkan.h
include/: component.h  entityManager.h  internal.h  log.h  oglRenderer.h  physics.h  renderer.h  storage.h  transformComponent.h  visualconstruct.h  vulkanprac.h
src/: Main.cpp  entityManager.cpp  log.cpp  oglRenderer.cpp  physics.cpp  storage.cpp  transformComponent.cpp
tests/: CMakeLists.txt  dep-test.cpp  storage-test.cpp
(+113 files in other folders)
